--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Wheel updater</title>
+    <style>
+
+    </style>
   </head>
   <body>
     <input id="file" type="file"/>
