first beta working solution

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,121 @@
   <head>
     <meta charset="UTF-8">
     <title>Wheel updater</title>
+    <meta name="viewport" content = "width = device-width, initial-scale=1, maximum-scale=1, user-scalable = no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <style>
+      @keyframes spin {
+        0% {
+          -webkit-transform: rotateZ(0deg);
+          transform: rotateZ(0deg);
+        }
+        100% {
+          -webkit-transform: rotateZ(360deg);
+          transform: rotateZ(360deg);
+        }
+      }
+      body {
+        background: black;
+      }
 
+      #page {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+      }
+
+      #wheel {
+        margin-top: 50px;
+        position: relative;
+        width: 200px;
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      #wheel svg, #wheel label {
+        width: 200px;
+        height: 200px;
+        position: absolute;
+        top: 0px;
+      }
+
+      #wheel svg {
+        animation-iteration-count: infinite;
+        animation-duration: 3s;
+        animation-timing-function: ease-in-out;
+      }
+
+      #wheel input[type="file"] {
+        display: none;
+      }
+
+      #result {
+        position: absolute;
+        top: 8px;
+        left: 8px;
+      }
+
+      #loading {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        border: 0px solid black;
+        border-radius: 1000px;
+        box-sizing: border-box;
+        width: 180px;
+        height: 180px;
+        overflow: hidden;
+      }
     </style>
   </head>
   <body>
-    <input id="file" type="file"/>
-    <img id="preview"/>
-    <div id="result"/>
+    <div id="page">
+      <div id="wheel">
+
+        <svg version="1.1" id="wheel_image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 200 200" style="enable-background:new 0 0 200 200;" xml:space="preserve">
+          <style type="text/css">
+            .st0{fill:none;stroke:#ffffff;stroke-miterlimit:10;}
+          </style>
+          <g>
+            <g>
+              <path class="st0" d="M100,199c-54.6,0-99-44.4-99-99C1,45.4,45.4,1,100,1c54.6,0,99,44.4,99,99C199,154.6,154.6,199,100,199z
+                 M100,9.6C50.1,9.6,9.6,50.1,9.6,100c0,49.9,40.6,90.4,90.4,90.4s90.4-40.6,90.4-90.4C190.4,50.1,149.9,9.6,100,9.6z"/>
+            </g>
+            <line class="st0" x1="111.7" y1="10.1" x2="108.3" y2="98.3"/>
+            <circle class="st0" cx="100" cy="100" r="8.3"/>
+            <circle class="st0" cx="100" cy="100" r="4.2"/>
+            <line class="st0" x1="95.3" y1="93.3" x2="155" y2="28.3"/>
+            <line class="st0" x1="171" y1="44.1" x2="97.2" y2="92.1"/>
+            <line class="st0" x1="189.5" y1="86.9" x2="103.5" y2="107.9"/>
+            <line class="st0" x1="189.7" y1="111.4" x2="102.8" y2="92"/>
+            <line class="st0" x1="172.7" y1="153.8" x2="95.8" y2="107.2"/>
+            <polyline class="st0" points="136.6,182.7 108.3,97.1 183.4,135  "/>
+            <polyline class="st0" points="109.3,190.3 108.3,100 134.8,16.5  "/>
+            <line class="st0" x1="89.4" y1="189.8" x2="91.7" y2="100"/>
+            <line class="st0" x1="65.9" y1="182.7" x2="92.3" y2="96.9"/>
+            <polyline class="st0" points="44.3,170.3 107.4,103.9 183.4,65   "/>
+            <line class="st0" x1="104.5" y1="107.3" x2="27.3" y2="153.8"/>
+            <line class="st0" x1="93.5" y1="94.7" x2="16.5" y2="134.7"/>
+            <line class="st0" x1="10.3" y1="111.4" x2="93.6" y2="94.8"/>
+            <polyline class="st0" points="10.3,88.6 92.1,103.9 156.8,170.3  "/>
+            <line class="st0" x1="16.6" y1="65" x2="95.8" y2="107.5"/>
+            <line class="st0" x1="103.4" y1="92.1" x2="27.3" y2="44.1"/>
+            <line class="st0" x1="44.9" y1="28.3" x2="107.3" y2="95.8"/>
+            <line class="st0" x1="65.2" y1="16.5" x2="92.3" y2="103.1"/>
+            <line class="st0" x1="89.4" y1="9.6" x2="92.3" y2="96.9"/>
+          </g>
+        </svg>
+
+        <div id="result"></div>
+        <label for="file">
+          <input id="file" type="file"/>
+        </label>
+      </div>
+    </div>
   </body>
 </html>
